[project]
name = "kontext-api"
description = "A custom ComfyUI node for integrating with the Fal Kontext API for advanced image editing and generation."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["fal-client>=0.4.0", "requests>=2.25.0", "Pillow>=9.0.0", "numpy>=1.19.0"]

[project.urls]
Repository = "https://github.com/SanDiegoDude/ComfyUI-Kontext-API"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Kontext-API"
Icon = ""
includes = []
